--- a/style.css
+++ b/style.css
@@ -13,13 +13,19 @@ html, body {
 }
 
 .container{
+    height: 200px;
+    width: 200px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .number{
-    margin: 0px;
+    margin: 10px;
     padding: 0px;
-    color: #8fc0a9 ;
+    color: #187bcd ;
     font-size: 150px;
     font-weight: bold;
     text-shadow: 0 1px 1px #bbb,
@@ -34,8 +40,7 @@ html, body {
 }
 
 .text{
-    margin: 0px;
-    padding: 0px;
-    font-size: 70px;
-    font-weight: lighter;
+    font-size: 30px;
+    font-weight: bolder;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
